tests/base/invalid/DefiniteAssign_CompileFail_3.whiley
import * from whiley.lang.*

int f(int x) requires x>=0 && y>0:
    return x
